--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,4 +1,4 @@
-extends ../../node_modules/pug-bootstrap/_bootstrap
+extends ./shared/_bootstrap
 append styles
   //	!-- Custom styles for this template --
   link(href="/css/cover.css", rel="stylesheet")
@@ -9,7 +9,7 @@ block body
       .cover-container
         .masthead.clearfix
           .inner
-            h3.masthead-brand Monzo Budget
+            h3.masthead-brand Monzo Web Client
             nav
               ul.nav.masthead-nav
                 li.active 
@@ -18,12 +18,12 @@ block body
                   a(href="https://github.com/roketworks/Monzo-Budget") Github
 
         .inner.cover
-          h1.cover-heading Welcome to Monzo Budget
-          p.lead Monzo Budget is a simple helper to manage your monzo spending. You can use the spending category and merchant to set your limits. You will get a monzo notification when you reach milestones.
+          h1.cover-heading Welcome to Monzo Web Client
+          p.lead Monzo Web Client is a simple helper to manage your monzo spending. You can use the spending category and merchant to set your spending limits or you can just browse your recent transactions.
           p.lead
           a(href="/auth", class="btn btn-lg btn-default") 
             img(src="/img/monzo-logo.svg" height=30 width=30) 
-            span  Signin with Monzo
+            span  Sign in with Monzo
 
         .mastfoot
           .inner
