--- a/public/css/transaction.css
+++ b/public/css/transaction.css
@@ -1,8 +1,57 @@
+.main-container {
+  padding-top: 84px;
+}
+
+.img-logo {
+  float: right;
+  height: 150px;
+  width: 150px;
+}
+
 .transaction-container {
   float: none;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 100px;
+}
+
+.transaction-details-container {
+  margin-top:15px;
+}
+
+.transaction-details-container > address {
+  font-weight: 400;
+  margin-top: 15px;
+}
+
+.transaction-category {
+  font-weight: 600;
+  font-size: 16px;
+}
+
+.transaction-header {
+  width:100%;
+}
+
+.transaction-header-amount {
+  text-align: right;  
+  float: right;
+}
+
+.transaction-website {
+  margin-top: 15px;
+}
+
+.map-container {
+  width:100%;
+  height:300px;
+}
+
+#map {
+  height: 100%;
+}
+
+.page-header {
+  margin: 0;
 }
 
 @media(min-width: 970px){
