--- a/src/views/transactions.pug
+++ b/src/views/transactions.pug
@@ -8,13 +8,7 @@ block content
     .balance-container.container-fluid
       .row
         span#current-balance Current Balance: #{balance}
-        //.col-xs-6.col-sm-4.balance-item
-          //.balance-display
-            //span Current Balance: #{balance}
-        //.col-xs-6.col-sm-4.balance-item
-        //.clearfix.visible-xs-block
-        //.col-xs-6.col-sm-4.balance-item
-      
+        
     hr
     h3 Transactions
     table.table.table-hover
@@ -35,7 +29,7 @@ block content
             td= transaction.displayAmount
             td= transaction.displayBalance
             td 
-              a(href='/transactions/' + transaction.id) a link
+              a(href='/transactions/' + transaction.id) view
   
     nav.aria-label
       ul.pager
