--- a/public/css/transaction.css
+++ b/public/css/transaction.css
@@ -4,8 +4,8 @@
 
 .img-logo {
   float: right;
-  height: 150px;
-  width: 150px;
+  height: 125px;
+  width: 125px;
 }
 
 .transaction-container {
@@ -41,6 +41,11 @@
   margin-top: 15px;
 }
 
+.gallery-container {
+  padding: 0;
+  margin-top: 30px;
+}
+
 .map-container {
   width:100%;
   height:300px;
@@ -55,13 +60,13 @@
 }
 
 @media(min-width: 970px){
-  .transaction-container { 
+  .transaction-container, .gallery-container { 
     max-width: 700px;
   }
 }
 
 @media(min-width: 1200px) {
-  .transaction-container {
+  .transaction-container, .gallery-container {
     max-width: 970px;
   }
 }
