--- a/src/views/transactions.pug
+++ b/src/views/transactions.pug
@@ -42,7 +42,7 @@ append scripts
   script.
     $('#load-btn').click(function(){
       $('#load-btn').addClass('disabled');
-      $('#transaction-table').LoadingOverlay("show");
+      $('#transaction-table').LoadingOverlay("show", {color: 'rgba(22,36,59, .6)', image: '/img/rolling.svg', zIndex: 1000});
       var before_param = $('#transaction-table tr:last .datedisplay').data('date'); 
       $.ajax({
         method: 'GET',
@@ -57,9 +57,8 @@ append scripts
       });
     });
     $('#exportbtn').click(function(e){
-      var row = $('#transaction-table > tbody tr:first');
       var first_date = $('#transaction-table > tbody tr:first .datedisplay').data('date'); 
-      var last_date = $('#transaction-table tr:last .datedisplay').data('date');
+      var last_date = $('#transaction-table > tbody tr:last .datedisplay').data('date');
       var params = {before: first_date, since: last_date};
       var querystr = $.param(params);
       e.preventDefault();  //stop the browser from following
