Inital auth route refactor

--- a/src/views/shared/_bootstrap.pug
+++ b/src/views/shared/_bootstrap.pug
@@ -1,44 +1,25 @@
 //- Copied template from node_modules for favicon bug workaround
 
-//- Including Icon mixins
+//- Including mixins
 include ../../../node_modules/pug-bootstrap/components/icons
-//- Including Alert mixins
 include ../../../node_modules/pug-bootstrap/components/alerts
-//- Including Tooltip mixins
 include ../../../node_modules/pug-bootstrap/components/tooltips
-//- Including Accordion mixins
 include ../../../node_modules/pug-bootstrap/components/accordion
-//- Including Carousel mixins
 include ../../../node_modules/pug-bootstrap/components/carousel
-//- Including Table mixins
 include ../../../node_modules/pug-bootstrap/components/tables
-//- Including Navbar mixins
 include ../../../node_modules/pug-bootstrap/components/navbar
-//- Including Toggle Button mixins
 include ../../../node_modules/pug-bootstrap/components/toggle
-//- Including Nav mixins
 include ../../../node_modules/pug-bootstrap/components/navs
-//- Including Label mixins
 include ../../../node_modules/pug-bootstrap/components/labels
-//- Including Panel mixins
 include ../../../node_modules/pug-bootstrap/components/panels
-//- Including Tab mixins
 include ../../../node_modules/pug-bootstrap/components/tabs
-//- Including Dropdown mixins
 include ../../../node_modules/pug-bootstrap/components/dropdowns
-//- Including Form control mixins
 include ../../../node_modules/pug-bootstrap/components/forms
-//- Including Modal dialog mixins
 include ../../../node_modules/pug-bootstrap/components/modal
-//- Including List group mixins
 include ../../../node_modules/pug-bootstrap/components/list-groups
-//- Including Progress bar mixins
 include ../../../node_modules/pug-bootstrap/components/progress-bars
-//- Including Button mixins
 include ../../../node_modules/pug-bootstrap/components/buttons
-//- Including Image mixins
 include ../../../node_modules/pug-bootstrap/components/images
-//- Including Bootswatch theme mixins
 include ../../../node_modules/pug-bootstrap/components/bootswatch
 
 doctype html
