--- a/src/views/map.pug
+++ b/src/views/map.pug
@@ -12,7 +12,7 @@ block content
       div#map
   
 append scripts 
-  script(src='/js/accounting.js')
+  script(src='/js/transactionUtil.js')
   script(src='https://cdn.jsdelivr.net/jquery.loadingoverlay/latest/loadingoverlay.min.js')
   script(src='https://cdn.jsdelivr.net/jquery.loadingoverlay/latest/loadingoverlay_progress.min.js')
   script(src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/js/bootstrap-datepicker.js')
@@ -71,7 +71,8 @@ append scripts
                 infowindow.setContent('<div><strong>' + locations[i].merchant.name + '</strong><br>' +
                   locations[i].merchant.metadata.foursquare_category + '<br/>' +
                   'Transactions: ' + locations[i].transactions.length + '<br/>' +
-                  'Total Spent: ' + accounting.formatMoney(Math.abs(locations[i].total/100), "£", 2) + '<br/>' +
+                  //'Total Spent: ' + accounting.formatMoney(Math.abs(locations[i].total/100), "£", 2) + '<br/>' +
+                  'Total Spent: ' + transactionUtil.default.formatMoney(locations[i].total, true) + '<br/>' +
                   '</div>');
                 infowindow.open(map, marker);
               }
