--- a/src/views/shared/layout.pug
+++ b/src/views/shared/layout.pug
@@ -18,7 +18,7 @@ block body
 					li
 						a(href='/transactions') Transactions
 					li
-						a(href='#') Budgeting
+						a(href='/budgeting') Budgeting
 					li
 						a(href='/map') Map
 
