--- a/src/views/budgeting.pug
+++ b/src/views/budgeting.pug
@@ -8,7 +8,7 @@ block content
     .balance-container.container-fluid
       .row
         //- possibly refactor into mixin and share the css, think about scss
-        span#current-spend Spent: #{spend}
+        span#current-spend Spent: #{spend} #[small from #{month}]
         span.buttonbar
           button(type="button" aria-label="Left Align" data-toggle="modal" data-target="#settings-modal")#exportbtn.btn.btn-default
             span(aria-hidden="true").glyphicon.glyphicon-cog
@@ -125,10 +125,12 @@ append scripts
         dataType: 'json',
         data: JSON.stringify({budgets: budgets}),
         success: function(data) {
-          alert(data);
+          //alert(data);
+          // Refresh
+          location.reload();
         }, 
         error: function(err) {
-          alert(err);
+          
         }
       });
     }
