--- a/src/views/shared/_bootstrap.pug
+++ b/src/views/shared/_bootstrap.pug
@@ -31,7 +31,7 @@ html(lang="en")
 			meta(name="viewport",content="width=device-width, initial-scale=1")
 			meta(name="description",content="")
 			meta(name="author",content="")
-			link(rel="icon",href="/img/favicon.ico")
+			link(rel="icon" type="image/svg+xml" href="/img/monzo-logo.svg")
 			title= title
 			block styles
 				link(rel="stylesheet",href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css")
