--- a/src/views/transaction.pug
+++ b/src/views/transaction.pug
@@ -1,7 +1,7 @@
 extends ./shared/layout
 
 append styles 
-  link(href='/css/transaction.css' rel='stylesheet')
+  link(href='/static/css/transaction.css' rel='stylesheet')
   link(href='//cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css' rel='stylesheet' media='screen')
 
 block content
