--- a/src/views/transactions.pug
+++ b/src/views/transactions.pug
@@ -3,7 +3,7 @@ extends ./shared/layout
 include ./shared/transactionrows
 
 append styles 
-  link(href='/css/transactions.css', rel='stylesheet')
+  link(href='/static/css/transactions.css', rel='stylesheet')
 
 block content
   .table-container
