--- a/src/views/shared/layout.pug
+++ b/src/views/shared/layout.pug
@@ -1,7 +1,7 @@
 extends _bootstrap
 
 append styles
-	link(href='/css/navbar.css', rel='stylesheet')
+	link(href='/static/css/navbar.css', rel='stylesheet')
 	
 block body
 	nav.navbar.navbar-inverse.navbar-fixed-top
