--- a/src/views/transactions.pug
+++ b/src/views/transactions.pug
@@ -42,7 +42,7 @@ append scripts
   script.
     $('#load-btn').click(function(){
       $('#load-btn').addClass('disabled');
-      $('#transaction-table').LoadingOverlay("show", {color: 'rgba(22,36,59, .6)', image: '/img/rolling.svg', zIndex: 1000});
+      $('#transaction-table').LoadingOverlay("show", {color: 'rgba(22,36,59, .6)', image: '/static/img/rolling.svg', zIndex: 1000});
       var before_param = $('#transaction-table tr:last .datedisplay').data('date'); 
       $.ajax({
         method: 'GET',
